# wgpu

examples/multiple-push-constants/: Cargo.toml  README.md
examples/multiple-push-constants/src/: main.rs  shader.wgsl  tests.rs
