[package]
name = "wgpu-multiple-push-constants-example"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "wgpu multiple push constants example"
publish = false

[[bin]]
name = "multiple-push-constants"
path = "src/main.rs"

[dependencies]
bytemuck.workspace = true
env_logger.workspace = true
futures-intrusive.workspace = true
pollster.workspace = true
wgpu.workspace = true
winit.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
wasm-bindgen-futures.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
wgpu-test.workspace = true
